<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            android:id="@+id/tv_profile"
            style="@style/TextAppearance.Felicare.Headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_profile"
            android:textColor="@color/orange"
            android:textSize="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/img_profile"
            android:layout_width="114dp"
            android:layout_height="114dp"
            android:src="@drawable/person"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_profile" />

        <TextView
            android:id="@+id/ed_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/name"
            android:gravity="center_vertical"
            style="@style/TextAppearance.Felicare.Body1"
            android:textSize="20dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:layout_marginTop="20dp"
            android:drawableEnd="@drawable/ic_edit"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_profile" />

        <TextView
            android:id="@+id/ed_namecat"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/cat_name"
            android:gravity="center_vertical"
            style="@style/TextAppearance.Felicare.Body1"
            android:textSize="20dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:layout_marginTop="10dp"
            android:drawableEnd="@drawable/ic_edit"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ed_name"/>

        <TextView
            android:id="@+id/ed_telephone"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/phonecall"
            android:gravity="center_vertical"
            style="@style/TextAppearance.Felicare.Body1"
            android:textSize="20dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:layout_marginTop="10dp"
            android:drawableEnd="@drawable/ic_edit"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ed_namecat"/>

        <TextView
            android:id="@+id/ed_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/email"
            android:gravity="center_vertical"
            style="@style/TextAppearance.Felicare.Body1"
            android:textSize="20dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:layout_marginTop="10dp"
            android:drawableEnd="@drawable/ic_edit"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ed_telephone"/>

        <TextView
            android:id="@+id/ed_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/password"
            android:gravity="center_vertical"
            style="@style/TextAppearance.Felicare.Body1"
            android:textSize="20dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:layout_marginTop="10dp"
            android:drawableEnd="@drawable/ic_edit"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ed_email"/>

        <Button
            android:id="@+id/btn_logout"
            style="@style/TextAppearance.Felicare.Button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bg_button_outlined"
            android:text="@string/logout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>