<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:keep="@layout/fragment_login"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_greeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.Felicare.Headline"
        android:text="@string/app_name"
        android:textSize="40dp"
        android:textColor="@color/orange"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_namecat"
        style="@style/TextAppearance.Felicare.TitleSmaller"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_cat"
        android:textSize="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_greeting" />

    <com.mikhaellopez.circularprogressbar.CircularProgressBar
        android:id="@+id/circularProgressBar"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginLeft="15dp"
        app:cpb_background_progressbar_color="@color/orange_light"
        app:cpb_background_progressbar_width="18dp"
        app:cpb_progress_direction="to_right"
        app:cpb_progressbar_color="@color/orange"
        app:cpb_progressbar_width="10dp"
        app:cpb_round_border="false"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_namecat" />

    <ImageView
        android:id="@+id/logo_home"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:contentDescription="@string/felicare_image_logo"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toBottomOf="@+id/circularProgressBar"
        app:layout_constraintEnd_toEndOf="@+id/circularProgressBar"
        app:layout_constraintStart_toStartOf="@+id/circularProgressBar"
        app:layout_constraintTop_toTopOf="@+id/circularProgressBar" />

    <TextView
        android:id="@+id/health_percent"
        style="@style/TextAppearance.Felicare.TitleSmaller"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:text="@string/health_percent"
        android:textColor="@color/brown"
        android:textSize="50dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/circularProgressBar"
        app:layout_constraintStart_toEndOf="@+id/circularProgressBar"
        app:layout_constraintTop_toTopOf="@+id/circularProgressBar" />

    <TextView
        android:id="@+id/tv_health"
        style="@style/TextAppearance.Felicare.TitleSmaller"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/healty"
        android:textColor="@color/brown"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/health_percent"
        app:layout_constraintStart_toEndOf="@+id/health_percent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="8dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/circularProgressBar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:padding="12dp"
            >

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/ic_health_check"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView"
                style="@style/TextAppearance.Felicare.TitleSmaller"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/cat_health_check"
                app:layout_constraintBottom_toBottomOf="@+id/imageView2"
                app:layout_constraintStart_toEndOf="@+id/imageView2"
                app:layout_constraintTop_toTopOf="@+id/imageView2" />

            <Button
                android:id="@+id/btn_login"
                style="@style/TextAppearance.Felicare.Button"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/bg_button_outlined"
                android:text="@string/start"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>