<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    tools:context=".ui.ResultCheckActivity">

    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="46dp"
        android:layout_height="46dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/bg_button"
        android:contentDescription="@string/cdesc_pick_image"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="?attr/colorOnPrimary" />

    <ImageView
        android:id="@+id/btn_history"
        android:layout_width="46dp"
        android:layout_height="46dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/ic_history"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:clickable="true"
        android:focusable="true" />

 <!--   <ImageButton
        android:id="@+id/btn_history"
        android:layout_width="46dp"
        android:layout_height="46dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/ic_history"
        android:background="@drawable/bg_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/white" />-->

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="70dp"
        android:src="@drawable/ic_sad_cat_face"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/percent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3">

        <com.mikhaellopez.circularprogressbar.CircularProgressBar
            android:id="@+id/circularProgressBar"
            android:layout_width="85dp"
            android:layout_height="85dp"
            app:cpb_background_progressbar_color="@color/orange_light"
            app:cpb_background_progressbar_width="18dp"
            app:cpb_progress_direction="to_right"
            app:cpb_progressbar_color="@color/orange"
            app:cpb_progressbar_width="10dp"
            app:cpb_round_border="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            style="@style/TextAppearance.Felicare.TitleSmaller"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/health_percent"
            android:textSize="20dp"
            app:layout_constraintBottom_toBottomOf="@+id/circularProgressBar"
            app:layout_constraintEnd_toEndOf="@+id/circularProgressBar"
            app:layout_constraintStart_toStartOf="@+id/circularProgressBar"
            app:layout_constraintTop_toTopOf="@+id/circularProgressBar" />

        <TextView
            android:id="@+id/disease"
            style="@style/TextAppearance.Felicare.TitleSmaller"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingLeft="10dp"
            android:text="@string/x_disease"
            android:textSize="25dp"
            app:layout_constraintStart_toEndOf="@+id/circularProgressBar"
            app:layout_constraintTop_toTopOf="@+id/circularProgressBar" />

        <TextView
            android:id="@+id/date_result"
            style="@style/TextAppearance.Felicare.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exp_date"
            android:textSize="16dp"
            app:layout_constraintEnd_toEndOf="@+id/disease"
            app:layout_constraintStart_toStartOf="@+id/disease"
            app:layout_constraintTop_toBottomOf="@+id/disease" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/percent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/because"
                style="@style/TextAppearance.Felicare.TitleSmaller"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/occours_because"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_desc_because"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/exp_lorem"
                style="@style/TextAppearance.Felicare.Body1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/because" />

            <TextView
                android:id="@+id/handling"
                style="@style/TextAppearance.Felicare.TitleSmaller"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:gravity="center_horizontal"
                android:text="@string/handling"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_desc_because" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/exp_lorem"
                style="@style/TextAppearance.Felicare.Body1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/handling" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <Button
        android:id="@+id/btn_telp"
        style="@style/TextAppearance.Felicare.Button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/bg_button"
        android:text="@string/call_doc"
        app:layout_constraintBottom_toTopOf="@id/btn_home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_home"
        style="@style/TextAppearance.Felicare.Button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/bg_button_outlined"
        android:text="@string/back_to_home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>